      files (this seems to happen on some systems, though we don't know
      how). (Closes: #284728)
  * checks/standards-version:
    + [CW] By definition, udebs aren't required to conform to policy, so
      don't issue no-standards-version-field for them. (If they happen to
      have a Standards-Version field anyway, we still check that it's
      valid.)

 -- Marc 'HE' Brockschmidt <he@debian.org>  Sat, 18 Dec 2004 13:13:11 +0100

lintian (1.23.5) unstable; urgency=low

  The "learn how to use intltool-debian correctly the hard way" release
  
  * checks/po-debconf: Set INTLTOOL_EXTRACT to fix invocation
    of intltool-update (Closes: #285419, #285471)

 -- Frank Lichtenheld <djpig@debian.org>  Mon, 13 Dec 2004 18:16:52 +0100

lintian (1.23.4) unstable; urgency=low

  The "A little pause from the sarge release work" release.
  
  * checks/changelog-file:
    + [FL] file has apparently changed its output format for
      symlinks sometime in the past. This broke symlink detection.
      (Closes: #276504)
  * checks/deb-format, unpack/unpack-binpkg-l1, unpack/unpack-binpkg-l2:
    + [CW] Fix binary package data member extraction to work with arbitrary
      compression algorithms instead of hardcoding data.tar.gz.
  * checks/debconf{,.desc}:
    + [FL] The SETTITLE command was introduced in debconf version
      1.3.22. Check the depends for that (Closes: #261890)
    + [FL] Warn about incorrect usage of commas in translated Choices
      fields. Patch by Denis Barbier after a suggestion by Andreas
      Metzler (Closes: #282030)
  * checks/debhelper:
    + [FL] Update list of debhelper scripts that modify maintainer
      scripts
  * checks/menu-format.desc:
    + [FL] Adjust references to the menu documentation. Noted by
      Jack Moffitt (Closes: #277393)
  * checks/po-debconf{,.desc}:
    + [FL] Check for outdated .pot files when using po-debconf.
      This requires a new dependency on intltool-debian. Patch